@@ -680,15 +680,15 @@ public final class JSONUtils {
      */
     public static Number transformNumber(Number input) {
         if (input instanceof Float) {
-            return new Double(input.toString());
+            return Double.valueOf(input.toString());
         } else if (input instanceof Short) {
-            return new Integer(input.intValue());
+            return Integer.valueOf(input.intValue());
         } else if (input instanceof Byte) {
-            return new Integer(input.intValue());
+            return Integer.valueOf(input.intValue());
         } else if (input instanceof Long) {
-            Long max = new Long(Integer.MAX_VALUE);
+            Long max = Long.valueOf(Integer.MAX_VALUE);
             if (input.longValue() <= max.longValue() && input.longValue() >= Integer.MIN_VALUE) {
-                return new Integer(input.intValue());
+                return Integer.valueOf(input.intValue());
             }
         }
 
