@@ -80,11 +80,11 @@ public class TestJSONArrayCollections extends TestCase {
 
     public void testToList_Byte() {
         List expected = new ArrayList();
-        expected.add(new Integer(1));
-        expected.add(new Integer(2));
+        expected.add(Integer.valueOf(1));
+        expected.add(Integer.valueOf(2));
         List bytes = new ArrayList();
-        bytes.add(new Byte((byte) 1));
-        bytes.add(new Byte((byte) 2));
+        bytes.add(Byte.valueOf((byte) 1));
+        bytes.add(Byte.valueOf((byte) 2));
         JSONArray jsonArray = JSONArray.fromObject(bytes);
         List actual = (List) JSONArray.toCollection(jsonArray);
         Assertions.assertEquals(expected, actual);
@@ -95,8 +95,8 @@ public class TestJSONArrayCollections extends TestCase {
         expected.add("A");
         expected.add("B");
         List chars = new ArrayList();
-        chars.add(new Character('A'));
-        chars.add(new Character('B'));
+        chars.add(Character.valueOf('A'));
+        chars.add(Character.valueOf('B'));
         JSONArray jsonArray = JSONArray.fromObject(chars);
         List actual = (List) JSONArray.toCollection(jsonArray);
         Assertions.assertEquals(expected, actual);
@@ -104,8 +104,8 @@ public class TestJSONArrayCollections extends TestCase {
 
     public void testToList_Double() {
         List expected = new ArrayList();
-        expected.add(new Double(1d));
-        expected.add(new Double(2d));
+        expected.add(Double.valueOf(1d));
+        expected.add(Double.valueOf(2d));
         JSONArray jsonArray = JSONArray.fromObject(expected);
         List actual = (List) JSONArray.toCollection(jsonArray);
         Assertions.assertEquals(expected, actual);
@@ -121,11 +121,11 @@ public class TestJSONArrayCollections extends TestCase {
 
     public void testToList_Float() {
         List expected = new ArrayList();
-        expected.add(new Double(1d));
-        expected.add(new Double(2d));
+        expected.add(Double.valueOf(1d));
+        expected.add(Double.valueOf(2d));
         List floats = new ArrayList();
-        floats.add(new Float(1f));
-        floats.add(new Float(2f));
+        floats.add(Float.valueOf(1f));
+        floats.add(Float.valueOf(2f));
         JSONArray jsonArray = JSONArray.fromObject(floats);
         List actual = (List) JSONArray.toCollection(jsonArray);
         Assertions.assertEquals(expected, actual);
@@ -133,8 +133,8 @@ public class TestJSONArrayCollections extends TestCase {
 
     public void testToList_Integer() {
         List expected = new ArrayList();
-        expected.add(new Integer(1));
-        expected.add(new Integer(2));
+        expected.add(Integer.valueOf(1));
+        expected.add(Integer.valueOf(2));
         JSONArray jsonArray = JSONArray.fromObject(expected);
         List actual = (List) JSONArray.toCollection(jsonArray);
         Assertions.assertEquals(expected, actual);
@@ -158,11 +158,11 @@ public class TestJSONArrayCollections extends TestCase {
 
     public void testToList_Long() {
         List expected = new ArrayList();
-        expected.add(new Integer(1));
-        expected.add(new Integer(2));
+        expected.add(Integer.valueOf(1));
+        expected.add(Integer.valueOf(2));
         List longs = new ArrayList();
-        longs.add(new Long(1L));
-        longs.add(new Long(2L));
+        longs.add(Long.valueOf(1L));
+        longs.add(Long.valueOf(2L));
         JSONArray jsonArray = JSONArray.fromObject(longs);
         List actual = (List) JSONArray.toCollection(jsonArray);
         Assertions.assertEquals(expected, actual);
@@ -170,8 +170,8 @@ public class TestJSONArrayCollections extends TestCase {
 
     public void testToList_Long2() {
         List expected = new ArrayList();
-        expected.add(new Long(Integer.MAX_VALUE + 1L));
-        expected.add(new Long(Integer.MAX_VALUE + 2L));
+        expected.add(Long.valueOf(Integer.MAX_VALUE + 1L));
+        expected.add(Long.valueOf(Integer.MAX_VALUE + 2L));
         JSONArray jsonArray = JSONArray.fromObject(expected);
         List actual = (List) JSONArray.toCollection(jsonArray);
         Assertions.assertEquals(expected, actual);
@@ -189,11 +189,11 @@ public class TestJSONArrayCollections extends TestCase {
 
     public void testToList_Short() {
         List expected = new ArrayList();
-        expected.add(new Integer(1));
-        expected.add(new Integer(2));
+        expected.add(Integer.valueOf(1));
+        expected.add(Integer.valueOf(2));
         List shorts = new ArrayList();
-        shorts.add(new Short((short) 1));
-        shorts.add(new Short((short) 2));
+        shorts.add(Short.valueOf((short) 1));
+        shorts.add(Short.valueOf((short) 2));
         JSONArray jsonArray = JSONArray.fromObject(shorts);
         List actual = (List) JSONArray.toCollection(jsonArray);
         Assertions.assertEquals(expected, actual);
@@ -269,11 +269,11 @@ public class TestJSONArrayCollections extends TestCase {
 
     public void testToSet_Byte() {
         Set expected = new HashSet();
-        expected.add(new Integer(1));
-        expected.add(new Integer(2));
+        expected.add(Integer.valueOf(1));
+        expected.add(Integer.valueOf(2));
         Set bytes = new HashSet();
-        bytes.add(new Byte((byte) 1));
-        bytes.add(new Byte((byte) 2));
+        bytes.add(Byte.valueOf((byte) 1));
+        bytes.add(Byte.valueOf((byte) 2));
         JSONArray jsonArray = JSONArray.fromObject(bytes);
         JsonConfig jsonConfig = new JsonConfig();
         jsonConfig.setCollectionType(Set.class);
@@ -286,8 +286,8 @@ public class TestJSONArrayCollections extends TestCase {
         expected.add("A");
         expected.add("B");
         Set chars = new HashSet();
-        chars.add(new Character('A'));
-        chars.add(new Character('B'));
+        chars.add(Character.valueOf('A'));
+        chars.add(Character.valueOf('B'));
         JSONArray jsonArray = JSONArray.fromObject(chars);
         JsonConfig jsonConfig = new JsonConfig();
         jsonConfig.setCollectionType(Set.class);
@@ -297,8 +297,8 @@ public class TestJSONArrayCollections extends TestCase {
 
     public void testToSet_Double() {
         Set expected = new HashSet();
-        expected.add(new Double(1d));
-        expected.add(new Double(2d));
+        expected.add(Double.valueOf(1d));
+        expected.add(Double.valueOf(2d));
         JSONArray jsonArray = JSONArray.fromObject(expected);
         JsonConfig jsonConfig = new JsonConfig();
         jsonConfig.setCollectionType(Set.class);
@@ -318,11 +318,11 @@ public class TestJSONArrayCollections extends TestCase {
 
     public void testToSet_Float() {
         Set expected = new HashSet();
-        expected.add(new Double(1d));
-        expected.add(new Double(2d));
+        expected.add(Double.valueOf(1d));
+        expected.add(Double.valueOf(2d));
         Set floats = new HashSet();
-        floats.add(new Float(1f));
-        floats.add(new Float(2f));
+        floats.add(Float.valueOf(1f));
+        floats.add(Float.valueOf(2f));
         JSONArray jsonArray = JSONArray.fromObject(floats);
         JsonConfig jsonConfig = new JsonConfig();
         jsonConfig.setCollectionType(Set.class);
@@ -332,8 +332,8 @@ public class TestJSONArrayCollections extends TestCase {
 
     public void testToSet_Integer() {
         Set expected = new HashSet();
-        expected.add(new Integer(1));
-        expected.add(new Integer(2));
+        expected.add(Integer.valueOf(1));
+        expected.add(Integer.valueOf(2));
         JSONArray jsonArray = JSONArray.fromObject(expected);
         JsonConfig jsonConfig = new JsonConfig();
         jsonConfig.setCollectionType(Set.class);
@@ -365,11 +365,11 @@ public class TestJSONArrayCollections extends TestCase {
 
     public void testToSet_Long() {
         Set expected = new HashSet();
-        expected.add(new Integer(1));
-        expected.add(new Integer(2));
+        expected.add(Integer.valueOf(1));
+        expected.add(Integer.valueOf(2));
         Set longs = new HashSet();
-        longs.add(new Long(1L));
-        longs.add(new Long(2L));
+        longs.add(Long.valueOf(1L));
+        longs.add(Long.valueOf(2L));
         JSONArray jsonArray = JSONArray.fromObject(longs);
         JsonConfig jsonConfig = new JsonConfig();
         jsonConfig.setCollectionType(Set.class);
@@ -379,8 +379,8 @@ public class TestJSONArrayCollections extends TestCase {
 
     public void testToSet_Long2() {
         Set expected = new HashSet();
-        expected.add(new Long(Integer.MAX_VALUE + 1L));
-        expected.add(new Long(Integer.MAX_VALUE + 2L));
+        expected.add(Long.valueOf(Integer.MAX_VALUE + 1L));
+        expected.add(Long.valueOf(Integer.MAX_VALUE + 2L));
         JSONArray jsonArray = JSONArray.fromObject(expected);
         JsonConfig jsonConfig = new JsonConfig();
         jsonConfig.setCollectionType(Set.class);
@@ -402,11 +402,11 @@ public class TestJSONArrayCollections extends TestCase {
 
     public void testToSet_Short() {
         Set expected = new HashSet();
-        expected.add(new Integer(1));
-        expected.add(new Integer(2));
+        expected.add(Integer.valueOf(1));
+        expected.add(Integer.valueOf(2));
         Set shorts = new HashSet();
-        shorts.add(new Short((short) 1));
-        shorts.add(new Short((short) 2));
+        shorts.add(Short.valueOf((short) 1));
+        shorts.add(Short.valueOf((short) 2));
         JSONArray jsonArray = JSONArray.fromObject(shorts);
         JsonConfig jsonConfig = new JsonConfig();
         jsonConfig.setCollectionType(Set.class);
