@@ -83,7 +83,7 @@ public class TestJSONObjectEvents extends TestCase {
     public void testFromObject_JSONObject() {
         JSONObject jsonObject = new JSONObject().element("name", "json")
             .element("func", new JSONFunction("return this;"))
-            .element("int", new Integer(1));
+            .element("int", Integer.valueOf(1));
         JSONObject.fromObject(jsonObject, jsonConfig);
         assertEvents();
     }
@@ -92,7 +92,7 @@ public class TestJSONObjectEvents extends TestCase {
         Map map = new HashMap();
         map.put("name", "json");
         map.put("func", new JSONFunction("return this;"));
-        map.put("int", new Integer(1));
+        map.put("int", Integer.valueOf(1));
         JSONObject.fromObject(map, jsonConfig);
         assertEvents();
     }
@@ -135,7 +135,7 @@ public class TestJSONObjectEvents extends TestCase {
         dynaBean.setDynaBeanClass(dynaClass);
         dynaBean.set("name", "json");
         dynaBean.set("func", new JSONFunction("return this;"));
-        dynaBean.set("int", new Integer(1));
+        dynaBean.set("int", Integer.valueOf(1));
         return dynaBean;
     }
 }
