@@ -94,8 +94,8 @@ public class TestJSONBuilder extends TestCase {
             .endObject();
         JSONObject jsonObj = JSONObject.fromObject(w.toString());
         assertEquals(Boolean.TRUE, jsonObj.get("bool"));
-        assertEquals(new Double(1.1d), jsonObj.get("numDouble"));
-        assertEquals(new Long(2).longValue(), ((Number) jsonObj.get("numInt")).longValue());
+        assertEquals(Double.valueOf(1.1d), jsonObj.get("numDouble"));
+        assertEquals(Long.valueOf(2).longValue(), ((Number) jsonObj.get("numInt")).longValue());
         assertEquals("text", jsonObj.get("text"));
         assertTrue(JSONUtils.isFunction(jsonObj.get("func")));
         assertEquals("function(){ var a = 1; }", jsonObj.get("func")
